fixed overflow in feed

--- a/styles/Feed.module.css
+++ b/styles/Feed.module.css
@@ -6,6 +6,7 @@
   background-color: #222222;
   height: fit-content;
   border-radius: 5px;
+  overflow-wrap: anywhere;
 }
 
 .posts {
